--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.btn-primary{
+  @apply text-white bg-primary rounded py-2 px-3 md:px-7 hover:bg-[#af2e8f] active:scale-105
+}
